On the home page, fix speakers display on mobile

--- a/public/stylesheets/live.css
+++ b/public/stylesheets/live.css
@@ -87,10 +87,17 @@
 }
 .personSummary__photo {
     display: inline-block;
-    width: 150px;
-    height: 150px;
-    border-radius: 150px;
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
     background-size: cover;
+}
+@media (min-width: 768px) {
+    .personSummary__photo {
+        width: 150px;
+        height: 150px;
+        border-radius: 150px;
+    }
 }
 .personSummary__desc {
     margin-top: 1rem;
